@@ -1,0 +1,78 @@
+# Automatically generated by php-weathermap v0.98
+
+
+WIDTH 900
+HEIGHT 900
+
+KEYPOS DEFAULT -1 -1 Traffic Load
+KEYTEXTCOLOR 0 0 0
+KEYOUTLINECOLOR 0 0 0
+KEYBGCOLOR 255 255 255
+BGCOLOR 255 255 255
+TITLECOLOR 0 0 0
+TIMECOLOR 0 0 0
+SCALE DEFAULT 0    0    192 192 192  
+SCALE DEFAULT 0    1    255 255 255  
+SCALE DEFAULT 1    10   140   0 255  
+SCALE DEFAULT 10   25    32  32 255  
+SCALE DEFAULT 25   40     0 192 255  
+SCALE DEFAULT 40   55     0 240   0  
+SCALE DEFAULT 55   70   240 240   0  
+SCALE DEFAULT 70   85   255 192   0  
+SCALE DEFAULT 85   100  255   0   0  
+
+SET key_hidezero_DEFAULT 1
+
+# End of global section
+
+
+# TEMPLATE-only NODEs:
+NODE DEFAULT
+	MAXVALUE 100
+
+NODE tmp_C2960_24
+	LABEL Node
+	LABELOFFSET E
+	ICON images/Cisco2960-24.png
+	DEFINEOFFSET port1 -63 -4
+	DEFINEOFFSET port2 -63 11
+	DEFINEOFFSET port24 210 11
+
+
+# TEMPLATE-only LINKs:
+LINK DEFAULT
+	BANDWIDTH 100M
+
+
+# regular NODEs:
+NODE switch1
+	TEMPLATE tmp_C2960_24
+	POSITION 500 300
+
+NODE switch2
+	TEMPLATE tmp_C2960_24
+	POSITION 500 700
+
+NODE sw1_int1
+	ICON images/copper2_1.png
+	POSITION switch1:port1
+
+NODE sw1_int2
+	ICON images/copper3_1.png
+	POSITION switch1:port2
+
+NODE sw2_int2
+	ICON images/copper3_1.png
+	POSITION switch2:port2
+
+
+# regular LINKs:
+LINK switch1-switch2
+	WIDTH 3
+	ZORDER 1500
+	NODES switch1:port24 switch2:port24
+
+
+
+
+# That's All Folks!
